[package]
name = "BdgtWrite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features =["json"]}
serde = { version = "1.0.208", features =["derive"]}
serde_json = "1.0.125"
actix-files = "0.6.6"
chrono = "0.4.38"
pulldown-cmark = "0.12.1"
